ecom select arrows fix on firefox

--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -699,11 +699,8 @@
 
 // General Select Elements
 select {
-    -webkit-appearance: none;
-    border-radius: 0;
-    padding: 0 30px 0 12px;
-    min-width: 50px;
-    border: 1px solid darken(@color-swatch1, 3%);
+    font-size: 16px;
+    min-width: 80px;
     @media @tablet {
         width: 100%;
     }
